# CUDAKernels

./: CMakeLists.txt  README.md
attention/Attention_pytorch/: GQA.py  MHA.py  MQA.py
attention/self_attention/: self_attention.cu
convolution/: convolution2d.cu  convolution2d.py
cudnn/: note.md
cutlass/: note.md
cutlass/code/: test_mma.cu
elementwise/: elementwise.cu  elementwise.py  elementwise_single.cu
flash_attention/: flash_attention.cu  flash_attention.py
gemm/: a.out  common.h  gemm.cu  gemm_wmma.cu  my_idx.py  note.md  other_idx.py  test_cublas.cu
include/: common.h
layernorm/: layernorm.cu
reduce_sum/: reduce_sum.cu  reduce_sum.py
rmsnorm/: note.md  rmsnorm.cu  rmsnorm.py
softmax/: softmax.cu  softmax.py
top-k/: top_k.cu
transpose/: transpose.cu
